:bug: fix: Ajuste de um gap enorme

--- a/UxTracker.Web/wwwroot/css/app.css
+++ b/UxTracker.Web/wwwroot/css/app.css
@@ -15,6 +15,10 @@
     height: max-content;
 }
 
+.no-flex{
+    flex: none;
+}
+
 .obj-fit{
     width: 100%;
     object-fit: contain;
